# ASHB2

./: .gitignore  1  CMakeCache.txt  CMakeLists.txt  IMPLEMENTATION  IMPLEMENTATION_SUMMARY.md  LICENCE  Makefile  README  README.md  REPORT_SYSTEM.md  SIMULATION_UPGRADE_README.md  TODO  action_list  build_arch.sh  build_err.txt  build_err_new.txt  build_linux.sh  build_windows.bat  cmake_install.cmake  compile_err.txt  imgui.ini  postmortem_generate.py  question.md  rand.cpp  refactor_main.py  saved.txt  savegame.txt  temp.py  temp3.txt  test.txt  test2.txt  testing_logs.txt  video.txt
data/: 01-06-2026-save.txt  02-06-2026_upgrade.txt  28-05-2026.txt  actions_log.txt  after_update.txt  cmd_log.txt  deaths_log.txt  diseases_log.txt  first_test.txt  long.txt  movements_log.txt
data/saves/: save_first_child.txt  save_first_child2.txt
plans/: 28.06.2026_22h17.md  29.06.2026-12h43.md  alternate-earth.md
src/: AI_SUMMARY_PROMPT.md  Action.cpp  CivilizationEngine.cpp  CognitiveArchitecture.cpp  CommunicationBasis.cpp  Diplomacy.cpp  Disease.cpp  Drive.cpp  Economics.cpp  EmotionalComplexity.cpp  Entity.cpp  EnvironmentalInteraction.cpp  Graph.cpp  Heritage.cpp  Image.cpp  JungianType.cpp  Kinship.cpp  LearningAdaptation.cpp  LifeCourse.cpp  Logging.cpp  NarrativeEngine.cpp  PersonaSystem.cpp  PlanningSystem.cpp  SDLEngine.cpp  SaveLoad.cpp  SemanticMemory.cpp  SocialDynamics.cpp  SocialOrder.cpp  SpatialMesh.cpp  TechTree.cpp  UI.cpp  WorldMap.cpp  WorldSeed.cpp  aventurier de l'inconnu  implem_free_will.cpp  implem_free_will.cpp.bak  main.cpp  movement.cpp
src/data/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv  act_0.csv  act_1.csv  act_10.csv  act_11.csv  act_12.csv  act_13.csv  act_14.csv  act_15.csv  act_16.csv  act_17.csv  act_18.csv  act_19.csv  act_2.csv  act_3.csv  act_4.csv  act_5.csv  act_6.csv  act_7.csv  act_8.csv  act_9.csv  (+15 more)
src/data/report_system/: create_report.py  index.php  index_test.html  report.html  style.css  tmp  tmp.py
src/environment/: EnvironmentModel.cpp  EnvironmentModel.h
src/header/: BetterRand.h  CivilizationEngine.h  CognitiveArchitecture.h  CommunicationBasis.h  Disease.h  Drive.h  Economics.h  EmotionalComplexity.h  Entity.h  EnvironmentalInteraction.h  ExternalData.h  FreeWillSystem.h  Graph.h  Image.h  JungianType.h  Kinship.h  LearningAdaptation.h  LifeCourse.h  Logging.h  Movement.h  NarrativeEngine.h  NeedLevel.h  PersonaSystem.h  PlanningSystem.h  SDLEngine.h  SaveLoad.h  SemanticMemory.h  SocialDynamics.h  SocialNormSystem.h  SocialOrder.h  SpatialMesh.h  TechTree.h  UI.h  WorldMap.h  WorldSeed.h  heritage.h
src/modules/: BehavioralModule.cpp  BehavioralModule.h
src/observability/: Observability.cpp  Observability.h
src/scalability/: Scalability.cpp  Scalability.h
src/util/: Debbug.h  clear.h  save_log.h
src/validation/: ValidationFramework.cpp  ValidationFramework.h
src/world/: Ecosystem.cpp  Ecosystem.h  Lexicon.cpp  Lexicon.h  Noise.cpp  Noise.h  Planet.cpp  Planet.h  PlanetView.cpp  PlanetView.h  ResourceSystem.cpp  ResourceSystem.h
